[package]
name = "eb_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
anyhow = "1.0"
eb_lexer = { path = "../eb_lexer" }
eb_ast   = { path = "../eb_ast" }

[dev-dependencies]
insta = "= 1.7.1"
