[package]
name = "eb_vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.0"
eb_vm_ctx = { path = "../eb_vm_ctx" }

[dev-dependencies]
eb_codegen_fast = { path = "../eb_codegen_fast" }
eb_parser = { path = "../eb_parser" }
eb_ast    = { path = "../eb_ast" }
eb_lexer = { path = "../eb_lexer" }
